--- a/IntegraEngine.vcxproj.filters
+++ b/IntegraEngine.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="Math.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="defines.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
