--- a/IntegraEngine.vcxproj
+++ b/IntegraEngine.vcxproj
@@ -135,6 +135,9 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="Math.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="TODO.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
