--- a/IntegraEngine.vcxproj
+++ b/IntegraEngine.vcxproj
@@ -128,7 +128,6 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="Map.cpp" />
-    <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="State.cpp" />
@@ -140,9 +139,9 @@
     <ClInclude Include="defines.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="InputHandler.h" />
+    <ClInclude Include="MainMenuState.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Math.hpp" />
-    <ClInclude Include="Scene.hpp" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="StateMachine.h" />
